# robot_control

./: README.md  main.py  play.py  postprocess.py  pyproject.toml
scripts/: calibrate.py  dir_to_videos_h264.py  online_overlay.py  overlay_two_videos.sh  postprocess.py  replay.py  residual_offline.py  residual_online.py  rollout.py  teleop.py  visualize.py
src/robot_control/agents/: action_commander.py  gello_listener.py  imitation_buffer.py  nn_buffer.py  teleop_aloha.py  teleop_keyboard.py  teleop_keyboard_norobot.py  teleop_keyboard_pusht.py
src/robot_control/calibration/: calibration.py  ee_transformation.py  realsense_manager.py
src/robot_control/camera/: multi_realsense.py  single_realsense.py
src/robot_control/data_processing/: annotate_corners.py  postprocesser.py
src/robot_control/modules/: README.me  perception.py  robot_env copy.py  robot_env.py  state_estimator.py  xarm_controller.py
src/robot_control/modules/common/: communication.py  xarm.py
src/robot_control/utils/: image_transforms.py  kinematics_utils.py  math.py  pi05_wrapper.py  udp_util.py  utils.py
src/robot_control/visualization/: visualize_trajectories.py
